# flower_speech_llm

./: .gitignore  CONTRIBUTING.md  Containerfile  LICENSE  MANIFEST.in  Makefile  README.md  mkdocs.yml  pyproject.toml  run_fl.sh  setup.py
.github/: rename_project.sh  template.yml
.github/workflows/: labeler.yml  main.yml  release.yml  rename_project.yml
configs/: centralized.yaml  centralized_apertus_8b.yaml  centralized_multiGPU.yaml  centralized_multiPGU.yaml  centralized_quick_test.yaml  centralized_qwen3_4b.yaml  centralized_qwen3_8b.yaml  centralized_voxtral.yaml  centralized_whisper_tinyllama.yaml  fl_A1_apertus_8b.yaml  fl_A1_mixed_fedavg.yaml  fl_A1_qwen3_4b.yaml  fl_A1_qwen3_8b.yaml  fl_A1_voxtral.yaml  fl_A1_whisper_tinyllama.yaml  fl_B1_apertus_8b.yaml  fl_B1_qwen3_4b.yaml  fl_B1_qwen3_8b.yaml  fl_B1_speaker_fedavg.yaml  fl_B1_voxtral.yaml  fl_B1_whisper_tinyllama.yaml  fl_B2_apertus_8b.yaml  fl_B2_qwen3_4b.yaml  fl_B2_qwen3_8b.yaml  fl_B2_speaker_fedprox.yaml  fl_B2_voxtral.yaml  fl_B2_whisper_tinyllama.yaml  fl_voxtral.yaml
deploy/: Dockerfile  flower_speech_llm.def  run_bsc.sh  run_centralized_speech_llm.sh  run_fl_A1_speech_llm.sh  run_fl_B1_speech_llm.sh  run_fl_B2_speech_llm.sh
flower_speech_llm/: __main__.py  base.py  cli.py  client_app.py  create_experiment_partitions.py  dataset.py  dataset_voxtral.py  evaluate_fl_model.py  fl_MLS_dev_speaker  fl_MLS_test  fl_multilingual  mls_audio  prepare_mls_fl.py  run_experiments.sh  server_app.py  train_centralized.py  train_centralized_voxtral.py  trainer.py  trainer_voxtral.py
flower_speech_llm/model/: __init__.py  connector.py  encoder.py  llm.py  voxtral.py
tests/: test_base.py
